# architecture-patterns-with-python

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pylama.ini  pyproject.toml  requirements.txt
locust/: api.py
src/: temp.py
src/alembic/: env.py
src/alembic/versions/: fad3dfa43329_inicial.py
src/allocation/: bootstrap.py  commands.py  config.py
src/allocation/adapters/: email.py  notifications.py  orm.py  redis_eventpublisher.py  repository.py
src/allocation/domain/: commands.py  events.py  model.py
src/allocation/entrypoints/: flask_app.py  redis_eventconsumer.py
src/allocation/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
tests/: conftest.py  pytest.ini
tests/e2e/: api_client.py  redis_client.py  test_api.py  test_external_events.py
tests/integration/: test_email.py  test_orm.py  test_repository.py  test_thread_safety.py  test_uow.py  test_views.py
tests/locust/: client-api.py
tests/unit/: test_allocate.py  test_batches.py  test_handlers.py  test_product.py  test_services.py
