[tool.poetry]
name = "architecture-patterns-with-python"
version = "0.1.0"
description = "Archtecture Patterns with Python book"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
