[tool.poetry]
name = "architecture-patterns-with-python"
version = "0.1.0"
description = "Archtecture Patterns with Python book"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
SQLAlchemy = "^1.3.22"
Flask = "^1.1.2"
psycopg2-binary = "^2.8.6"
schema = "^0.7.4"
tenacity = "^6.3.1"
redis = "^3.5.3"
pytest = "^6.2.2"
pytest-icdiff = "^0.5"
locust = "^1.4.4"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
